2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: Merged the rules for creating the egrep and
	fgrep script.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (usage): Make sure both copies of the ``usage''
	  strings match.  Add ``(C)'' to the copyright notice.
	* src/dfa.c: Changed "out of memory" to "memory exhausted" to
	  match messages elsewhere in the source.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c: Use mbsupport.h .
	* src/dfa.c: Move the inclusion of mbsupport.h lower.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (main): Use PACKAGE_STRING for --version.

2004-11-20  Benno Schulenberg  <benno@nietvergeten.nl>  (tiny change)

	* src/grep.c (reset): Move the stat check ...
	(grepfile): ... here, and also check for a fifo.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	This change is based on a suggestion by Elliott Hughes.

	* src/grep.c (usage): Use PACKAGE_BUGREPORT.
	* po/*.po: Hacked the current translation again.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	* configure.in: Added a copyright notice (using gawk as a template).
	(AC_INIT, AM_INIT_AUTOMAKE): Changed to the ``new'' form so that
	  the PACKAGE_* symbols get defined correctly in config.h.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	* ./cvsignore: Amended several .cvsignore files and
	  removed *.gmo, acinclude.m4 and stamp-h.in from the root one.
	* m4/init.m4: Nuked, it was breaking current automake.
	* m4/Makefile.m4: Removed init.m4.
	* autogen.m4: Drop support for legacy autoconf; tell whether the
	  auto tools exited successfully or not; fix the permissions of
	  tests/*.sh--CVS doesn't provide a way to fix it.

2004-11-19  Stepan Kasal  <kasal@ucw.cz>

	* src/dfa.c: Removed old version of gofast patch, from 2003-05-30.
	* src/search.c (check_multibyte_string): Likewise.

2004-11-19  Stepan Kasal  <kasal@ucw.cz>

	* src/dfa.c: Added some simple changes from gawk.
	* src/mbsupport.h: Imported from gawk.

2004-11-11  Stepan Kasal  <kasal@ucw.cz>